added the index and teh show action for the garden controller

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
 <h1>This is the home page of Babilonio</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+
+<%= link_to "See all available gardens", gardens_path %>
