--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background: #FDF3EB;
+  background: #FDF6F0;
   margin-top: -50px;
   display: flex;
   align-items: center;
@@ -53,13 +53,13 @@
   .get-started-left {
     height: 100%;
     width: 50%;
-    background: #F2994A;
+    background: #F6D78E;
     padding: 50px;
   }
   .get-started-right {
     background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), image_url("get-started-cover.jpg");
-    background-size:     cover;
-    background-repeat:   no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
     height: 100%;
     width: 50%;
