added the geocoding features but does not work yet

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -53,7 +53,7 @@
   .get-started-left {
     height: 100%;
     width: 50%;
-    background: #F6D78E;
+    background: #3AB56E;
     padding: 50px;
   }
   .get-started-right {
