--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,34 +16,35 @@
 </div>
 
 
-<div class="meet-hosts">
-  <div style="display: flex">
-    <h1 style="color: #3AB56E">Meet</h1><h1 style="color: transparent;">l</h1><h1>our hosts</h1>
-  </div>
-  <p>Our hosts come from all walks of life but they all have one thing in common. Their passion for gardens.</p>
-
-  <div class="host-img-desc">
-    <div class="host-img">
-      <p style="display: none;">Displaynone</p>
+<div class="container">
+  <div class="meet-hosts">
+    <div style="display: flex">
+      <h1 style="color: #3AB56E">Meet</h1><h1 style="color: transparent;">l</h1><h1>our hosts</h1>
     </div>
-    <div class="host-desc">
-      <h3>Cassy Myers</h3>
-      <p>Software Enginer</p>
+    <p>Our hosts come from all walks of life but they all have one thing in common. Their passion for gardens.</p>
+
+    <div class="host-img-desc">
+      <div class="host-img">
+        <p style="display: none;">Displaynone</p>
+      </div>
+      <div class="host-desc">
+        <h3 style="color: #3AB56E">Cassy Myers</h3>
+        <p>Software Enginer</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo deleniti vitae sunt, iure dolorum perferendis architecto ab, labore aspernatur repudiandae temporibus. Odio neque porro dignissimos consequatur ut omnis, temporibus dolor ad iure, sit illo debitis ex officiis veniam nesciunt unde!</p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="get-started">
+    <div class="get-started-left">
+      <h3>Start Exploring</h3>
       <br>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo deleniti vitae sunt, iure dolorum perferendis architecto ab, labore aspernatur repudiandae temporibus. Odio neque porro dignissimos consequatur ut omnis, temporibus dolor ad iure, sit illo debitis ex officiis veniam nesciunt unde!</p>
     </div>
+    <div class="get-started-right">
+      <p style="display: none;">Displaynone</p>
+    </div>
   </div>
 </div>
-
-
-<div class="get-started">
-  <div class="get-started-left">
-    <h3>Start Exploring</h3>
-    <br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo deleniti vitae sunt, iure dolorum perferendis architecto ab, labore aspernatur repudiandae temporibus. Odio neque porro dignissimos consequatur ut omnis, temporibus dolor ad iure, sit illo debitis ex officiis veniam nesciunt unde!</p>
-  </div>
-  <div class="get-started-right">
-    <p style="display: none;">Displaynone</p>
-  </div>
-</div>
-
