--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,9 @@
   <h1>Explore. Book. Enjoy.</h1>
   <p>Botanical Gardens, Tropical Gardens, Yards and many more.</p>
   <%= link_to gardens_path do %>
-    <div class="button">
-      <p>Start exploring</p>
-    </div>
+  <div class="button">
+    <p>Start exploring</p>
+  </div>
   <% end %>
 </div>
 
@@ -35,16 +35,69 @@
       </div>
     </div>
   </div>
-
-
-  <div class="get-started">
-    <div class="get-started-left">
-      <h3>Start Exploring</h3>
-      <br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo deleniti vitae sunt, iure dolorum perferendis architecto ab, labore aspernatur repudiandae temporibus. Odio neque porro dignissimos consequatur ut omnis, temporibus dolor ad iure, sit illo debitis ex officiis veniam nesciunt unde!</p>
-    </div>
-    <div class="get-started-right">
-      <p style="display: none;">Displaynone</p>
-    </div>
-  </div>
 </div>
+
+
+<div class="start-exploring">
+  <h1>Gardens all around the world available to you</h1>
+<!--   <div class="container"> -->
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-lg-4 home-card">
+        <div class="home-card-img">
+          <p>img</p>
+        </div>
+          <div class="home-card-desc">
+            <h5>Garden.type</h5>
+            <p>Garden type desc</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-4 home-card">
+        <div class="home-card-img">
+          <p>img</p>
+        </div>
+          <div class="home-card-desc">
+            <h5>Garden.type</h5>
+            <p>Garden type desc</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-4 home-card">
+        <div class="home-card-img">
+          <p>img</p>
+        </div>
+          <div class="home-card-desc">
+            <h5>Garden.type</h5>
+            <p>Garden type desc</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-4 home-card">
+        <div class="home-card-img">
+          <p>img</p>
+        </div>
+          <div class="home-card-desc">
+            <h5>Garden.type</h5>
+            <p>Garden type desc</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-4 home-card">
+        <div class="home-card-img">
+          <p>img</p>
+        </div>
+          <div class="home-card-desc">
+            <h5>Garden.type</h5>
+            <p>Garden type desc</p>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-4 home-card">
+        <div class="home-card-img">
+          <p>img</p>
+        </div>
+          <div class="home-card-desc">
+            <h5>Garden.type</h5>
+            <p>Garden type desc</p>
+          </div>
+      </div>
+
+    </div>
+<!--   </div> -->
+</div>
+
