--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -61,12 +61,45 @@
   }
 }
 
-
-
 .become-host {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   margin-top: 50px;
+  .host-third {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    img {
+      height: 250px;
+      width: 250px;
+      flex-grow: 0;
+    }
+    p {
+      text-align: center;
+      margin-top: 30px;
+    }
+  }
+  .sign-up-in {
+    margin-top: 30px;
+    margin-bottom: 50px;
+    display: flex;
+    width: 100%;
+    height: 150px;
+    align-items: center;
+    justify-content: space-around;
+    a:hover {
+      transform: scale(1.005);
+      text-decoration: none;
+    }
+    a:hover .sign-up-btn{
+      background: #3AB56E;
+    }
+    a {
+      width: 50%;
+      color: white;
+    }
+  }
 }
