added the show page front end and added the new garden action

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -97,9 +97,16 @@
     a:hover .sign-up-btn{
       background: #3AB56E;
     }
+    a:hover .become-host-btn{
+      background: #F4F4F4;
+    }
     a {
       width: 50%;
       color: white;
     }
   }
 }
+
+
+
+
