--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,19 +1,22 @@
 .avatar {
-  width: 40px;
+  max-width: 40px;
+  min-width: 40px;
+  max-height: 40px;
+  min-height: 40px;
   border-radius: 50%;
 }
 .avatar-large {
-  width: 56px;
+  max-width: 56px;
   border-radius: 50%;
 }
 .avatar-bordered {
-  width: 40px;
+  max-width: 40px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
 .avatar-square {
-  width: 40px;
+  max-width: 40px;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
