--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -35,9 +35,23 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 50%;
+  /*width: 50%;*/
   margin-right: 5px;
   border-radius: 5px;
   color: #219653;
   box-shadow: 0 0 10px grey;
+}
+
+.book-now-btn {
+  color: white;
+  padding: 30px;
+  background: #219653;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 0 0 10px grey;
+  margin-top: 60px;
+  margin-bottom: 100px;
 }
