--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,14 @@
     required: true,
     autofocus: true,
     input_html: { autocomplete: "email" }%>
+    <%= f.input :name,
+    required: true,
+    autofocus: true,
+    input_html: { autocomplete: "name" }%>
+    <%= f.input :job,
+    required: true,
+    autofocus: true,
+    input_html: { autocomplete: "job" }%>
     <%= f.input :password,
     required: true,
     hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -17,6 +25,10 @@
     <%= f.input :password_confirmation,
     required: true,
     input_html: { autocomplete: "new-password" } %>
+    <%= f.input :photo,
+    required: true %>
+    <%= f.input :photo_cache, as: :hidden %>
+
   </div>
 
   <div class="form-actions">
