--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,7 +74,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4 host-third">
           <%= image_tag('connect.svg') %>
-          <p>Connect with people who appreciate your great efforts.</p>
+          <p>Connect with people and make a business out of your passion.</p>
         </div>
       </div>
       <div class="sign-up-in">
