--- a/app/views/gardens/_info_window.html.erb
+++ b/app/views/gardens/_info_window.html.erb
@@ -1,6 +1,8 @@
 
 
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path garden.photo, height: 300, width: 350, crop: :fill %>'); display: flex; flex-direction: column; align-items: center; justify-content: center; background-size: cover; background-position: center;">
-  <p style="color: white;"><%= garden.address %></p>
-  <p style="color: white;"><%= garden.price %>$</p>
+<%= link_to garden_path(garden) do %>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path garden.photo, height: 400, width: 450, crop: :fill %>'); display: flex; flex-direction: column; align-items: center; justify-content: center; background-size: cover; background-position: center;">
+  <b style="color: white; font-size: 17px; text-align: center; margin-bottom: 10px;"><%= garden.address %></b>
+  <b style="color: white; font-size: 17px;"><%= garden.price %>$</b>
 </div>
+<% end %>
