--- a/app/assets/stylesheets/pages/_gardens_index.scss
+++ b/app/assets/stylesheets/pages/_gardens_index.scss
@@ -50,3 +50,13 @@
   outline: none !important;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
 }
+
+.mapboxgl-popup-content {
+  padding: 0 !important;
+  height: 150px;
+  width: 200px;
+  border-radius: 5px;
+  .card-category {
+    height: 100% !important;
+  }
+}
